tests/idris2/basic014/expected
1/1: Building Rewrite (Rewrite.idr)
Error: While processing right hand side of wrongCommutes. Rewriting by m + k = k + m did not change type S k + m = m + S k.

Rewrite:15:25--15:57
 11 | plusCommutes (S k) m = rewrite plusCommutes k m in sym (plusnSm m k)
 12 | 
 13 | wrongCommutes : (n, m : Nat) -> n + m = m + n
 14 | wrongCommutes Z m = sym (plusnZ m)
 15 | wrongCommutes (S k) m = rewrite plusCommutes m k in ?bar
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Error: While processing right hand side of wrongCommutes2. Nat is not a rewrite rule type.

Rewrite:19:26--19:43
 15 | wrongCommutes (S k) m = rewrite plusCommutes m k in ?bar
 16 | 
 17 | wrongCommutes2 : (n, m : Nat) -> n + m = m + n
 18 | wrongCommutes2 Z m = sym (plusnZ m)
 19 | wrongCommutes2 (S k) m = rewrite m in ?bar
                               ^^^^^^^^^^^^^^^^^

